feature: start server and listen on given port

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/ShuLaPy/ovenjoy.git"
   },
+  "scripts": {
+    "dev": "bun --watch examples/http/index.ts"
+  },
   "keywords": [
     "ovenjoy",
     "bun",
