feature: http method support in main app and router
created Radix Tree 🌳 to handle routing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,11 @@
     "moduleDetection": "force",
     "baseUrl": ".",
     "paths": {
-      "ovenjoy": ["index.ts"]
+      "ovenjoy": ["index.ts"],
+      "@ovenjoy-types": ["./lib/types.ts"]
     },
     "allowImportingTsExtensions": true,
+    "strictPropertyInitialization": false,
     "noEmit": true,
     "composite": true,
     "strict": true,
