feature: handle middleware chain and send response
created request and response classes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
+    "declaration": true,
     "types": [
       "bun-types" // add Bun global
     ]
