--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["ESNext"],
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "moduleDetection": "force",
     "baseUrl": ".",
     "paths": {
@@ -12,7 +12,7 @@
     },
     "allowImportingTsExtensions": true,
     "strictPropertyInitialization": false,
-    "noEmit": true,
+    "noEmit": false,
     "composite": true,
     "strict": true,
     "downlevelIteration": true,
@@ -21,9 +21,15 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "declaration": true,
     "types": [
       "bun-types" // add Bun global
-    ]
-  }
+    ],
+    "outDir": "./dist",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "esModuleInterop": true,
+    "tsBuildInfoFile": "/dev/null"
+  },
+  "include": ["lib/**/*", "./index.ts"],
+  "exclude": ["node_modules", "dist", "./build.ts"]
 }
