--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/index.js",
   "type": "module",
   "license": "MIT",
+  "version": "0.1.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ShuLaPy/ovenjoy.git"
@@ -18,6 +19,9 @@
     "prepare": "husky install",
     "release": "release-it"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "ovenjoy",
     "bun",
@@ -43,6 +47,5 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  },
-  "version": "0.1.0-alpha.0"
+  }
 }
